--- a/src/pages/players/players.html
+++ b/src/pages/players/players.html
@@ -11,7 +11,9 @@
   <ion-list>
     <button ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
      
-      <ion-icon [name]="item.icon" item-start></ion-icon>
+     <ion-avatar item-start>
+            <img src="assets/imgs/match.jpg">
+        </ion-avatar>
       {{item.title}}
      
       <ion-icon [name]="item.state" item-end></ion-icon>
