--- a/src/pages/statistics/statistics.html
+++ b/src/pages/statistics/statistics.html
@@ -3,10 +3,10 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>statistics</ion-title>
+    <ion-title>Estadísticas</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
- statistics
+	
 </ion-content>
