--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,14 +12,12 @@
   <ion-card>
       <ion-card-header text-center>
          <ion-icon item-start="" role="img" class="icon icon-md ion-md-football item-icon" aria-label="football" ng-reflect-name="football"></ion-icon>
-             LA MATRIX
+             LA MATRIX-- {{general.configs.version}}
             <ion-icon item-start="" role="img" class="icon icon-md ion-md-beer item-icon" aria-label="beer" ng-reflect-name="beer"></ion-icon>
       </ion-card-header>
       <img src="assets/imgs/matrix.jpg"/>
       <ion-card-content>
-        <p>
-         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived <noscript></noscript>.
-        </p>
+        <p>{{general.configs.textHome}}</p>
       </ion-card-content>
   </ion-card>
 
