--- a/src/pages/players/players.html
+++ b/src/pages/players/players.html
@@ -11,11 +11,8 @@
   <ion-list>
     <button ion-item *ngFor="let item of items" (click)="itemTapped($event, item)">
      
-     <ion-avatar item-start>
-            <img src="assets/imgs/match.jpg">
-        </ion-avatar>
+      <ion-avatar item-start><img src="assets/imgs/match.jpg"></ion-avatar>
       {{item.title}}
-     
       <ion-icon [name]="item.state" item-end></ion-icon>
     </button>
   </ion-list>
