V. 0.2.2: Avance en módulo de jugadores

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,7 +12,7 @@
   <ion-card>
       <ion-card-header text-center>
          <ion-icon item-start="" role="img" class="icon icon-md ion-md-football item-icon" aria-label="football" ng-reflect-name="football"></ion-icon>
-             LA MATRIX- {{general.configs.version}}
+             LA MATRIX {{general.configs.version}}
             <ion-icon item-start="" role="img" class="icon icon-md ion-md-beer item-icon" aria-label="beer" ng-reflect-name="beer"></ion-icon>
       </ion-card-header>
       <img src="assets/imgs/matrix.jpg"/>
