V. 0.3.2: Avance en validaciones del login

--- a/src/pages/player/player.html
+++ b/src/pages/player/player.html
@@ -81,7 +81,7 @@
 
 	    <ion-item>
 	      	<ion-icon name='mail' item-start style="color: #55acee"></ion-icon>
-	      	<ion-label>Correro</ion-label>
+	      	<ion-label>Correo</ion-label>
 	      	<ion-badge item-end>correo@servidor.com.co</ion-badge>
 	    </ion-item>
 
