--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -5,12 +5,12 @@
 </ion-header>
 
 <ion-content padding>
-	<img class="logo" src="assets/imgs/matrix.jpg" alt="Ionic Framework logo">
+	<img class="logo" src="assets/imgs/matrix.jpg" alt="La-matrix">
 	<div class="login">
 
-      	<h1>Bienvenido</h1>
+      	<h1>Bienvenido a La-Matrix</h1>
 
-      	<p>Ingrese sus datos.</p>
+      	<p>Ingrese sus datos para acceder a la información de La-Matrix.</p>
 
       	<form [formGroup]="form" (ngSubmit)="logIn()">
         <ion-list>
